deploy/05-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: controlplane-portal
  namespace: controlplane-portal
spec:
  selector:
    app: controlplane-portal
  ports:
    - name: http
      port: 80
      targetPort: http
